# functional_parsing_library

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  asserts.py  char.py  char_in.py  digit.py  fmap.py  hacky_function_composition.py  ignore_left.py  ignore_right.py  integer.py  many.py  parse_a_non_regular_language.py  parse_and.py  parse_or.py  parser.py  pyproject.toml  recursive_parser.py  requirements.txt  word.py
.github/workflows/: ci.yml  tests.yml
functional_parsing_library/: __init__.py  asserts.py  bind_parser.py  check_for_empty_string.py  fmap.py  hacky_function_composition.py  parse.py  parser.py  recursive_parser.py  run_parser.py  test_bind.py  test_fmap.py  test_hacky_function_composition.py  test_parse.py  test_parsing_arbitrary_token_streams.py  test_recursive_parser.py  test_run_parser.py  test_try_parser.py  token_of_type.py
functional_parsing_library/combinators/: __init__.py  ignore_right.py  lookahead.py  lookahead_parser.py  many.py  many_till.py  many_till_exclusive.py  maybe.py  maybe_parser.py  parse_and.py  parse_or.py  separated_by.py  some_till_exclusive.py  test_lookahead.py  test_maybe.py  test_parse_and.py  test_parse_or.py  test_try_parser.py  try_parser_.py
functional_parsing_library/examples/: arithmetic.py  csv_file.py  json_parser.py  person.py  test_json_parser.py  test_person.py  version.py
functional_parsing_library/integer/: integer.py  test_integer.py
functional_parsing_library/strings/: __init__.py  any_char.py  char.py  char_does_not_match.py  char_in.py  char_not_in.py  digit.py  test_any_char.py  test_char.py  test_char_does_not_match.py  test_char_in.py  test_word.py  (+3 more)
parsing/: check_for_empty_string.py  fmap.py  parser.py  pop_one_character.py  recursive_parser.py
todos/: test_many_until_overlapping.py  test_operator_precedence.py
(+69 files in other folders)
