[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "functional_parsing_library"
readme = "README.md"
version = "0.0.12"
authors = [
  { name="Wessel Bindt", email="wesselbindt@gmail.com" },
]
description = "A type-safe applicative parsing library"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
python_files = "*"
