[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "functional_parsing_library"
readme = "README.md"
version = "0.0.26"
authors = [
  { name="Wessel Bindt", email="wesselbindt@gmail.com" },
]
description = "A type-safe applicative parsing library"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.pytest.ini_options]
python_files = "*"
addopts = "--doctest-modules"

[tool.ruff.lint]
select = ["W", "F"]

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
